@startuml

title __POLYGON's Class Diagram__\n

  namespace  {
    namespace elron.foundationwizard.com {
      namespace ui {
        namespace customcomponents {
          namespace polygon {
            class helron.foundationwizard.com.ui.customcomponents.polygon.PolygonCreatorPanel {
                ~ coordinates : StringBuilder
                ~ settingSpinners : List<JSpinner>
                - angle : double
                - factor : double
                - leftPanel : JPanel
                - rightPanel : JPanel
                - sideNb : int
                - southPanel : JTextPane
                + PolygonCreatorPanel()
                {static} + main()
                - init()
                - initLeftPanel()
                - initRightPanel()
                - initSouthPanel()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace elron.foundationwizard.com {
      namespace ui {
        namespace customcomponents {
          namespace polygon {
            class helron.foundationwizard.com.ui.customcomponents.polygon.PolygonPanel {
                ~ alpha : double
                ~ coordinates : StringBuilder
                ~ mutiplicator : double
                ~ polygon : Polygon
                ~ sidesNb : int
                + affiche()
                + getCoordinates()
                + paintComponent()
                - initPolygon()
            }
          }
        }
      }
    }
  }
  

  helron.foundationwizard.com.ui.customcomponents.polygon.PolygonCreatorPanel -up-|> javax.swing.JPanel
  helron.foundationwizard.com.ui.customcomponents.polygon.PolygonPanel -up-|> javax.swing.JPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
